lib/src/compiler/tests/testdata/errors/65.out
error[E001]: syntax error
 --> line:1:11
  |
1 | rule test condition: true }
  |           ^ expected colon `:` or opening brace `{`
  |